# AutoCat

./: .gitignore  .gitlab-ci.yml  AutoCat开发记录.txt  CLAUDE.md  LICENSE  Makefile  README.md  build_app.py  build_win.py  install.sh  pyproject.toml
autokat/: __main__.py
config/: ai_settings.json
docs/: MACOS_PACKAGING_STANDARD.md
models/: mobileclip_s0_labels.npz
packaging/: AutoCat-win.nsi  AutoCat-win.spec  GITLAB_RELEASE_PIPELINE.md  README-win.md  README.md  RELEASE_CHECKLIST.md  python_runtime_audit.py  release-policy.toml
scripts/: build_release.sh
test_materials/: generate_test_materials.py
tests/: test_ai_dialog_renames.py  test_content_sync.py  test_db_migrations.py  test_deepseek_401_handling.py  test_deepseek_empty_choices_error.py  test_editor_diversity.py  test_ffmpeg_xfade_compat.py  test_import_jobs.py  test_keychain_save.py  test_material_analysis.py  test_no_safe_template_fallback.py  test_packaging.py  test_provider_and_intent.py  test_qt_closure_fix.py  test_quality.py  test_slice_cache.py  test_task175_fixes.py  test_task175_renderer_fixes.py  test_task176_fixes.py  test_task239_fixes.py  test_task_retry.py  test_timeline_and_color.py  test_v312_topic_inference.py  test_v313_under_generation.py  test_v314_app_logo.py  test_v315_preserve_color.py  test_v316_post_extend.py  test_v317_relaxed_validation.py  test_v318_ai_default_duration.py  test_v319_batch_and_calibration.py  test_v320_relaxed_validation.py  test_v321_tts_sanitize.py  test_v322_fake_material_guard.py  test_v322_prompt_leak_cleanup.py  test_v324_tpad_shortfall.py  (+14 more)
(+37 files in other folders)
